implemented CTE page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,6 +118,11 @@
             </ul>
           </div>
         </div>
+        <noscript>
+          <div class="callout warning margin-0">
+            Site functionality is not guaranteed without JavaScript enabled. Errors may occur.
+          </div>
+        </noscript>
       </div>
 
       <% if session[:siteadmin] %>
@@ -134,6 +139,7 @@
           </div>
         </div>
       <% end %>
+
 
       <div class="content" style="padding-top: 1rem">
         <div class="grid-container">
