added file extensions for image_tags

--- a/app/views/more/tsa.html.erb
+++ b/app/views/more/tsa.html.erb
@@ -38,13 +38,13 @@
               </div>
               <ul class="orbit-container">
                 <li class="is-active orbit-slide">
-                  <%= image_tag "tsa-1", class: "orbit-image", alt: "TSA 1" %>
+                  <%= image_tag "tsa-1.jpg", class: "orbit-image", alt: "TSA 1" %>
                 </li>
                 <li class="orbit-slide">
-                  <%= image_tag "tsa-2", class: "orbit-image", alt: "TSA 2" %>
+                  <%= image_tag "tsa-2.jpg", class: "orbit-image", alt: "TSA 2" %>
                 </li>
                 <li class="orbit-slide">
-                  <%= image_tag "tsa-3", class: "orbit-image", alt: "TSA 3" %>
+                  <%= image_tag "tsa-3.jpg", class: "orbit-image", alt: "TSA 3" %>
                 </li>
               </ul>
             </div>
@@ -68,13 +68,13 @@
               </div>
               <ul class="orbit-container">
                 <li class="is-active orbit-slide">
-                  <%= image_tag "tsacomp-1", class: "orbit-image", alt: "Competition 1" %>
+                  <%= image_tag "tsacomp-1.jpg", class: "orbit-image", alt: "Competition 1" %>
                 </li>
                 <li class="orbit-slide">
-                  <%= image_tag "tsacomp-2", class: "orbit-image", alt: "Competition 2" %>
+                  <%= image_tag "tsacomp-2.jpg", class: "orbit-image", alt: "Competition 2" %>
                 </li>
                 <li class="orbit-slide">
-                  <%= image_tag "tsacomp-3", class: "orbit-image", alt: "Competition 3" %>
+                  <%= image_tag "tsacomp-3.jpg", class: "orbit-image", alt: "Competition 3" %>
                 </li>
               </ul>
             </div>
