--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <div class="top-bar" id="responsive-menu">
           <div class="top-bar-left">
             <ul class="dropdown menu" data-dropdown-menu="data-dropdown-menu">
-              <li class="menu-text">DocLine</li>
+              <li class="menu-text"><%= image_tag 'docline-logo.png', alt: 'Logo', class: 'menu-icon' %>DocLine</li>
               <li>
                 <%= link_to "Home", root_path %>
               </li>
