--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -54,3 +54,10 @@
       <% end %>
     </div>
   </span>
+
+  <hr>
+
+  <%= image_tag "providers.jfif", class: "margin-bottom-1" %>
+
+  <h4>Providing the best service for our customers</h4>
+  <p>DocLine keeps high standards for our partners to ensure you get nothing less than the best service possible</p>
