--- a/app/views/more/tsa.html.erb
+++ b/app/views/more/tsa.html.erb
@@ -3,7 +3,7 @@
   <h1>TSA Chapter</h1>
 
   <div class="grid-x grid-margin-x">
-    <div class="cell medium-3" data-sticky-container>
+    <div class="cell medium-2" data-sticky-container>
       <div class="sticky" data-anchor="stickycontent" data-sticky data-sticky-on="medium">
         <ul class="vertical menu" data-magellan="data-magellan">
           <li>
@@ -19,15 +19,15 @@
       </div>
     </div>
 
-    <div id="stickycontent" class="cell medium-9 grid-x grid-margin-x sections">
-      <section id="why-tsa" data-magellan-target="why-tsa">
-        <div class="cell large-8">
+    <div id="stickycontent" class="cell medium-10 sections">
+      <section id="why-tsa" class="grid-x grid-margin-x" data-magellan-target="why-tsa">
+        <div class="cell large-7">
           <h3>Why TSA</h3>
           <p>Technology Student Association or better known as TSA offers engineering and technology students around the country the opportunity to show their potential. Many prospects around the country do not have the opportunity to show full potential at
             school or around the community, so TSA which is one of the greatest communities for people offers that opportunity with a wonderful and open community that has been around since 1978. The goal of TSA is to prepare you for the future of technology and
             the community truly shows that with the popular motto of, "Learning to Lead in a Technical World".</p>
         </div>
-        <div class="cell large-4">
+        <div class="cell large-5">
           <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit="data-orbit" data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
             <div class="orbit-wrapper">
               <div class="orbit-controls">
@@ -51,13 +51,13 @@
           </div>
         </div>
       </section>
-      <section id="our-competitions" data-magellan-target="our-competitions">
-        <div class="cell large-8">
+      <section id="our-competitions" class="grid-x grid-margin-x" data-magellan-target="our-competitions">
+        <div class="cell large-7">
           <h3>Our Competitions</h3>
           <p>TSA offers a variety of competitions for everyone involved in the STEM field. It has programs for computer science, biotechnology, engineering, and anything that is math and science related. The competitions start off on a state level and based on
             the results of the teams you will be able to move on to a national level where the place of competition changes every year. It is important to remember that not every competition is available at the state level and deadlines are crucial.</p>
         </div>
-        <div class="cell large-4">
+        <div class="cell large-5">
           <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit="data-orbit" data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
             <div class="orbit-wrapper">
               <div class="orbit-controls">
@@ -81,7 +81,7 @@
           </div>
         </div>
       </section>
-      <section id="service-and-awards" data-magellan-target="service-and-awards">
+      <section id="service-and-awards" class="grid-x grid-margin-x" data-magellan-target="service-and-awards">
         <div class="cell">
           <h3>Community Service Projects and Awards</h3>
           <p>The TSA community has a great community service program and helps the community whenever they can. A popular community service event that TSA is involved in would be Relay for Life and other ACS sponsored events. When chapters participate in these
