added citations. fixed indexing on main slider

--- a/app/views/home/_mainslider.html.erb
+++ b/app/views/home/_mainslider.html.erb
@@ -34,6 +34,7 @@
             <% if @index == 0 %>
               <span class="show-for-sr" data-slide-active-label="data-slide-active-label">Current Slide</span><% end %>
           </button>
+          <% @index += 1 %>
         <% end %>
       </nav>
     </div>
